[package]
name = "cocobot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.7", features = [
  "macros",
  "auto-send",
  "ctrlc_handler",
  "sqlite-storage",
] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15"
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
strum = { version = "0.24", features = ["derive"] }
if_chain = "1.0"
